--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                                     <img src="./img/i/btn-diagnosis-min.png" alt="">
                                 </div>
                             </div>
-                            <div class="c-btn-skip"></div>
+                            <div class="c-btn-skip" v-on:click="onSkip"></div>
                         </div>
                     </transition>
                 </script>
@@ -46,7 +46,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="c-btn-skip"></div>
+                            <div class="c-btn-skip" v-on:click="onSkip"></div>
                         </div>
                     </transition>
                 </script>
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-btn-skip"></div>
+                    <div class="c-btn-skip" v-on:click="onSkip"></div>
                 </div>
             </transition>
             <transition name="fade">
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-btn-skip"></div>
+                    <div class="c-btn-skip" v-on:click="onSkip"></div>
                 </div>
             </transition>
 
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-btn-skip"></div>
+                    <div class="c-btn-skip" v-on:click="onSkip"></div>
                 </div>
             </transition>
             
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-btn-skip"></div>
+                    <div class="c-btn-skip" v-on:click="onSkip"></div>
                 </div>
             </transition>
 
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-btn-skip"></div>
+                    <div class="c-btn-skip" v-on:click="onSkip"></div>
                 </div>
             </transition>
 
@@ -140,7 +140,7 @@
                     <h1 class="header">あなたの探してる相手はここにいます！</h1>
                     <div class="bg">
                         <div class="diagnosis-box">
-                            <h1 class="title"></h1>
+                            <h1 class="result-title"></h1>
                             <div class="text-box">
                                 <p class="p-text">
                                     あなたは
@@ -194,7 +194,7 @@
                     <h1 class="header">あなたの探してる相手はここにいます！</h1>
                     <div class="bg">
                         <div class="diagnosis-box">
-                            <h1 class="title"></h1>
+                            <h1 class="result-title"></h1>
                             <div class="text-box">
                                 <p class="p-text">
                                     あなたは
@@ -248,7 +248,7 @@
                     <h1 class="header">あなたの探してる相手はここにいます！</h1>
                     <div class="bg">
                         <div class="diagnosis-box">
-                            <h1 class="title"></h1>
+                            <h1 class="result-title"></h1>
                             <div class="text-box">
                                 <p class="p-text">
                                     あなたは
@@ -302,7 +302,7 @@
                     <h1 class="header">あなたの探してる相手はここにいます！</h1>
                     <div class="bg">
                         <div class="diagnosis-box">
-                            <h1 class="title"></h1>
+                            <h1 class="result-title"></h1>
                             <div class="text-box">
                                 <p class="p-text">
                                     あなたは
