ボタン追加修正

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,19 @@
                             <img src="./img/i/img-top-min.png" class="img-full" alt="">
                             <div class="diagnosis">
                                 <p class="top-text">簡単な診断であなたの理想の相手がわかる！</p>
-                                <div class="btn-diagnosis" v-on:click="onMoveStageStart">
-                                    <img src="./img/i/btn-diagnosis-min.png" alt="">
+                                <div class="btn-diagnosis">
+                                    <div>
+                                        <img src="./img/i/btn-diagnosis-min.png" alt="" class="btn-diagnosis-img" v-on:click="onMoveStageStart">
+                                        <div class="navi-registration">
+                                            <a class="l-btn-registration" href="mailto:reg1@DOMAINNAME?subject=chance%3A[BCODE]%3Aafcd%3A[afcd]%3A&body=Yahooメールアドレスを推奨しております。%0d%0a%0d%0a本メール送信後、確認メールが返信されますので、そちらから本登録へのお手続きをお願い致します。%0d%0a%0d%0a※返信が届かない場合は迷惑メールフォルダをご確認くださいますようお願い致します。">
+                                                <img src="./img/i/iqlp_reborn01_btn_man_lp_registration_small-min.png" alt="">
+                                            </a>
+                                            <a class="l-btn-registration" href="mailto:reg0@DOMAINNAME?subject=chance%3A[BCODE]%3Aafcd%3A[afcd]%3A&body=Yahooメールアドレスを推奨しております。%0d%0a%0d%0a本メール送信後、確認メールが返信されますので、そちらから本登録へのお手続きをお願い致します。%0d%0a%0d%0a※返信が届かない場合は迷惑メールフォルダをご確認くださいますようお願い致します。">
+                                                <img src="./img/i/iqlp_reborn01_btn_woman_lp_registration_small-min.png" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
                             <div class="c-btn-skip" v-on:click="onSkip"></div>
